tests/bad/syntax/005-type-identifier-1.clap
type t_no_you_cant! = { U }
